[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/world/environment/hazard/refresh/refresh.png" type="Texture" id=1]
[ext_resource path="res://src/world/environment/hazard/refresh/Refresh.gd" type="Script" id=2]
[ext_resource path="res://src/world/environment/hazard/refresh/refresh_particles.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.2178, 67.9178 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 2
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 50, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.07
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.6
scale_random = 0.5
anim_speed = 10.0
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Refresh" type="StaticBody2D" groups=[
"hazard",
]]
position = Vector2( 448, 512 )
input_pickable = true
collision_layer = 8
script = ExtResource( 2 )
AIR_SHAPE = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.86102, 11.4442 )
shape = SubResource( 2 )

[node name="air" type="Area2D" parent="."]
gravity_vec = Vector2( -1.22465e-14, -200 )
priority = 1.0
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="air"]
position = Vector2( 0, -230 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 20.0
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -30 )
amount = 200
speed_scale = 1.16
randomness = 0.29
fract_delta = false
visibility_rect = Rect2( -1500, -1500, 3000, 3000 )
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blowing = SubResource( 5 )
anims/blowing_off = SubResource( 6 )
anims/blowing_on = SubResource( 7 )
[connection signal="input_event" from="." to="." method="_on_Pipe_input_event"]
[connection signal="body_entered" from="air" to="." method="_on_air_body_entered"]
[connection signal="body_exited" from="air" to="." method="_on_air_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
